# InfiPac

./: .gitignore  4  CMakeLists.txt  README  README.md  main.cc
src/: CMakeLists.txt  collider.h  component.h  debug.h  gravitycomponent.cc  gravitycomponent.h  immovablerect.cc  immovablerect.h  instakillcomponent.h  learningaicomponent.h  math_structs.h  pelletcomponent.h  pelletentity.cc  pelletentity.h  playercomponent.h  rectanglerenderer.cc  rectanglerenderer.h  renderer.h  rigidbody.h  simpleaicomponent.cc  simpleaicomponent.h  simplecollidercomponent.cc  simplecollidercomponent.h  utils.h  world.cc  world.h  worldentity.cc  worldentity.h
tmux/: tmux.sh
